develop the AttrTypeCACA crud
